fix #18 by adding our CN girls messages
fix whitespaces

stylez

fix bug with too much sliding height

fix white spaces for rosalyn

fine tune slide height

slider on lowest layer for links to be clickable

move text up more for visability

--- a/frontend/src/components/inPageNav/inPageNav.css
+++ b/frontend/src/components/inPageNav/inPageNav.css
@@ -6,7 +6,7 @@
 }
 
 .in-page-nav {
-    max-height: 600px;
+    max-height: 400px;
     min-width: 100%;
 
     box-sizing: border-box;
@@ -14,7 +14,6 @@
     padding-left: 4vw;
     padding-right: 4vw;
 
-    font-size: 2.125rem;
     color: white;
 }
 
@@ -23,8 +22,8 @@
     min-width: 100%;
 
     justify-content: space-between;
-
-    padding-top: 5vw;
+    float: none;
+    z-index:0;
 }
 
 .in-page-nav-button {
